--- a/src/index.html
+++ b/src/index.html
@@ -31,20 +31,24 @@
       </div>
 
       <div class="header__bottom">
-        <div class="container">
-          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-          <div class="tickets header__tickets">
-            <p class="tickets__main">квитки</p>
-            <button class="btn btn__tickets">
-              <img
-                src="./images/icons/arrow_right.svg"
-                alt="tickets"
-                class="tickets__arrow"
-              >
-            </button>
+        <div class="container container--title">
+          <div class="header__bottom-wr">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="tickets header__tickets">
+              <p class="tickets__main">квитки</p>
+              <button class="btn btn__tickets">
+                <img
+                  src="./images/icons/arrow_right.svg"
+                  alt="tickets"
+                  class="tickets__arrow"
+                >
+              </button>
+            </div>
           </div>
         </div>
       </div>
+
+      <p class="header__decor">події</p>
 
       <div class="menu-header header__menu-header" id="menu-header">
         <div class="menu-header__content">
@@ -110,40 +114,44 @@
 
         <article class="actions__item">
           <div class="container">
-            <img
-              src="./images/actions/img-1.png"
-              alt="Йду і повертаюсь"
-              class="actions__img"
-            >
-            <div>
-              <div class="actions__data">
-                <p class="actions__name">ВИСТАВКА</p>
-                <p class="actions__date">26.08-29.11.2019</p>
+            <div class="actions__content">
+              <img
+                src="./images/actions/img-1.png"
+                alt="Йду і повертаюсь"
+                class="actions__img"
+              >
+              <div class="actions__description">
+                <div class="actions__data">
+                  <p class="actions__name">ВИСТАВКА</p>
+                  <p class="actions__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="actions__title">Йду і повертаюсь</h3>
+                <p class="actions__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
               </div>
-              <h3 class="actions__title">Йду і повертаюсь</h3>
-              <p class="actions__text">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-              </p>
             </div>
           </div>
         </article>
 
         <article class="actions__item">
           <div class="container">
-            <img
-              src="./images/actions/img-2.png"
-              alt="Йду і повертаюсь"
-              class="actions__img"
-            >
-            <div>
-              <div class="actions__data">
-                <p class="actions__name">ВИСТАВКА</p>
-                <p class="actions__date">26.08-29.11.2019</p>
+            <div class="actions__content">
+              <img
+                src="./images/actions/img-2.png"
+                alt="Йду і повертаюсь"
+                class="actions__img"
+              >
+              <div class="actions__description">
+                <div class="actions__data">
+                  <p class="actions__name">ВИСТАВКА</p>
+                  <p class="actions__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="actions__title">І спогади і мрії</h3>
+                <p class="actions__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
               </div>
-              <h3 class="actions__title">І спогади і мрії</h3>
-              <p class="actions__text">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
-              </p>
             </div>
           </div>
         </article>
@@ -171,6 +179,7 @@
       <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="section-title gallery__title">Галерея</h2>
+
           <div class="slider gallery__slider">
             <div class="slider__images">
               <div class="slider__img-wr">
@@ -220,6 +229,29 @@
                 <div class="slider__button"></div>
               </div>
             </div>
+          </div>
+
+          <div class="gallery__content">
+            <img
+              src="./images/slider/image-1--dt.png"
+              alt="image-1"
+              class="gallery__img-dt gallery__img-dt--1"
+            >
+            <img
+              src="./images/slider/image-2--dt.png"
+              alt="image-2"
+              class="gallery__img-dt gallery__img-dt--2"
+            >
+            <img
+              src="./images/slider/image-3--dt.png"
+              alt="image-3"
+              class="gallery__img-dt gallery__img-dt--3"
+            >
+            <img
+              src="./images/slider/image-4--dt.png"
+              alt="image-4"
+              class="gallery__img-dt gallery__img-dt--4"
+            >
           </div>
         </div>
       </section>
@@ -312,7 +344,7 @@
                 </div>
               </div>
               <p class="schedule__text">
-                Вихідні понеділок, вівторок
+                <strong>Вихідні:</strong> понеділок, вівторок
               </p>
               <p class="schedule__text">
                 Каса припиняє роботу за одну годину до закриття музею
@@ -357,36 +389,34 @@
             <a href="#" class="schedule__btn">
               <img src="./images/icons/arrow-up.svg" alt="наверх">
             </a>
-          </div>
-        </div>
-      </section>
 
-      <section class="menu">
-        <h2 class="visually-hidden">Меню</h2>
+            <div class="menu schedule__menu">
+              <h2 class="visually-hidden">Меню</h2>
 
-        <div class="container">
-          <div class="menu__content">
-            <div class="menu__box">
-              <a href="#gallery" class="menu__item">Галерея</a>
-              <a href="#actions" class="menu__item">Виставки та події</a>
-            </div>
-            <div class="menu__box">
-              <a href="#schedule" class="menu__item">Про Нас</a>
-              <a href="#schedule" class="menu__item">Контакти</a>
+              <div class="menu__content">
+                <div class="menu__box">
+                  <a href="#gallery" class="menu__item">Галерея</a>
+                  <a href="#actions" class="menu__item">Виставки та події</a>
+                </div>
+                <div class="menu__box">
+                  <a href="#schedule" class="menu__item">Про Нас</a>
+                  <a href="#schedule" class="menu__item">Контакти</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="footer page__footer">
-      <div class="container">
+    <div class="container">
+      <footer class="footer page__footer">
         <div class="footer__content">
           <div class="footer__item">Designed by Zhyriada Marina</div>
           <div class="footer__item">Copyright © 2019. All Rights Reserved.</div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
 
