--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header class="header" id="header">
+      <img src="./images/mobile-muzej.png" alt="image" class="header__image">
       <div class="header__nav">
         <a href="#menu" class="header__link icon icon--menu"></a>
 
@@ -17,15 +18,13 @@
 
       <div class="header__bottom">
         <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-        <a href="#" class="header__bottom__link">КВИТКИ<img src="./images/icons/arrow-white.svg" alt="arrow logo" class="header__bottom__image"></a>
+
+        <div class="header__bottom__container">
+          <p href="#" class="header__bottom__link">КВИТКИ</p>
+          <img src="./images/icons/arrow-white.svg" alt="arrow logo" class="header__bottom__image">
+        </div>
       </div>
     </header>
-
-    <section id="scroll-top">
-      <div>
-        <a href="#header" class="scroll__top"></a>
-      </div>
-    </section>
 
     <aside class="menu" id="menu">
       <nav class="menu__navigation">
@@ -60,7 +59,7 @@
       </div>
     </aside>
 
-    <main>
+    <main class="main">
       <section class="events" id="expo">
         <div class="events__conteiner">
           <h2 class="events__title">Актуальні події</h2>
@@ -68,23 +67,27 @@
           <div class="events__catalog">
             <div class="event">
               <img src="./images/events/mobile-event-1.png" alt="painting" class="event__image">
-              <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
-              <h4 class="event__title">Йду і повертаюсь</h4>
-              <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              <div class="event__conteiner">
+                <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
+                <h4 class="event__title">Йду і повертаюсь</h4>
+                <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+              </div>
             </div>
 
             <div class="event">
               <img src="./images/events/mobile-event-2.png" alt="painting" class="event__image">
-              <h3 class="event__subtitle">ВИСТАВКА <span  class="event__date">26.08-29.11.2019</span></h3>
-              <h4 class="event__title">І спогади і мрії</h4>
-              <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              <div class="event__conteiner">
+                <h3 class="event__subtitle">ВИСТАВКА <span class="event__date">26.08-29.11.2019</span></h3>
+                <h4 class="event__title">І спогади і мрії</h4>
+                <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
       <section class="lections">
-        <!-- <img src="./images/mobile-muzej-2.png" alt="image" class="lections__image"> -->
+        <img src="./images/mobile-muzej-2.png" alt="image" class="lections__image">
         <div class="lections__container">
           <h2 class="lections__title">ЛЕКЦІЯ <span class="lections__date">26/08/2019 - 11:00</span></h2>
           <p class="lections__name">Від класицизму до романтизму</p>
@@ -93,19 +96,36 @@
 
       <section class="gallery">
         <h2 class="gallery__title">Галерея</h2>
-        <div class="gallery__slider">
-          <img
-            src="./images/gallery/gallery.png"
-            alt="image"
-            class="gallery__image"
-          >
 
-          <div class="gallery__slider__items">
-            <div class="gallery__slider__item"></div>
-            <div class="gallery__slider__item"></div>
-            <div class="gallery__slider__item"></div>
-            <div class="gallery__slider__item"></div>
+        <div class="gallery__slider">
+          <div>
+            <img
+              src="./images/gallery/gallery.png"
+              alt="image"
+              class="gallery__image"
+            >
           </div>
+          <div>
+            <img
+              src="./images/gallery/gallery-2.png"
+              alt="image"
+              class="gallery__image"
+            >
+          </div>
+          <div>
+            <img
+              src="./images/gallery/gallery-2.png"
+              alt="image"
+              class="gallery__image"
+            >
+          </div>
+        </div>
+
+        <div class="gallery__slider__items">
+          <div class="gallery__slider__item"></div>
+          <div class="gallery__slider__item"></div>
+          <div class="gallery__slider__item"></div>
+          <div class="gallery__slider__item"></div>
         </div>
       </section>
 
@@ -176,6 +196,8 @@
             до закриття музею
           </p>
         </div>
+
+        <!-- <a href="#header" class="scroll__top"></a> -->
 
         <div class="footer__contacts">
           <h2 class="footer__title">Контакти:</h2>
