ad animation for images

--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
             <div class="tickets header__tickets">
               <p class="tickets__main">квитки</p>
-              <button class="btn btn__tickets">
+              <a href="#actions" class="btn btn__tickets">
                 <img
                   src="./images/icons/arrow_right.svg"
                   alt="tickets"
                   class="tickets__arrow"
                 >
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -115,11 +115,13 @@
         <article class="actions__item">
           <div class="container">
             <div class="actions__content">
-              <img
-                src="./images/actions/img-1.png"
-                alt="Йду і повертаюсь"
-                class="actions__img"
-              >
+              <div class="actions__img-wr">
+                <img
+                  src="./images/actions/img-1.png"
+                  alt="Йду і повертаюсь"
+                  class="actions__img"
+                >
+              </div>
               <div class="actions__description">
                 <div class="actions__data">
                   <p class="actions__name">ВИСТАВКА</p>
@@ -137,11 +139,13 @@
         <article class="actions__item">
           <div class="container">
             <div class="actions__content">
-              <img
-                src="./images/actions/img-2.png"
-                alt="Йду і повертаюсь"
-                class="actions__img"
-              >
+              <div class="actions__img-wr">
+                <img
+                  src="./images/actions/img-2.png"
+                  alt="Йду і повертаюсь"
+                  class="actions__img"
+                >
+              </div>
               <div class="actions__description">
                 <div class="actions__data">
                   <p class="actions__name">ВИСТАВКА</p>
@@ -157,11 +161,13 @@
         </article>
 
         <article class="actions__item">
-          <img
-            src="./images/actions/img-3.png"
-            alt="Від класицизму до романтизму"
-            class="actions__img actions__img--3"
-          >
+          <div class="actions__img-wr">
+            <img
+              src="./images/actions/img-3.png"
+              alt="Від класицизму до романтизму"
+              class="actions__img actions__img--3"
+            >
+          </div>
 
           <div class="container">
             <div class="actions__bottom">
@@ -232,26 +238,37 @@
           </div>
 
           <div class="gallery__content">
-            <img
-              src="./images/slider/image-1--dt.png"
-              alt="image-1"
-              class="gallery__img-dt gallery__img-dt--1"
-            >
-            <img
-              src="./images/slider/image-2--dt.png"
-              alt="image-2"
-              class="gallery__img-dt gallery__img-dt--2"
-            >
-            <img
-              src="./images/slider/image-3--dt.png"
-              alt="image-3"
-              class="gallery__img-dt gallery__img-dt--3"
-            >
-            <img
-              src="./images/slider/image-4--dt.png"
-              alt="image-4"
-              class="gallery__img-dt gallery__img-dt--4"
-            >
+            <div class="gallery__img-wr gallery__img-wr--1">
+              <img
+                src="./images/slider/image-1--dt.png"
+                alt="image-1"
+                class="gallery__img-dt gallery__img-dt--1"
+              >
+            </div>
+
+            <div class="gallery__img-wr gallery__img-wr--2">
+              <img
+                src="./images/slider/image-2--dt.png"
+                alt="image-2"
+                class="gallery__img-dt gallery__img-dt--2"
+              >
+            </div>
+
+            <div class="gallery__img-wr gallery__img-wr--3">
+              <img
+                src="./images/slider/image-3--dt.png"
+                alt="image-3"
+                class="gallery__img-dt gallery__img-dt--3"
+              >
+            </div>
+
+            <div class="gallery__img-wr gallery__img-wr--4">
+              <img
+                src="./images/slider/image-4--dt.png"
+                alt="image-4"
+                class="gallery__img-dt gallery__img-dt--4"
+              >
+            </div>
           </div>
         </div>
       </section>
@@ -275,6 +292,7 @@
                   name="email"
                   autocomplete="on"
                   placeholder="E-mail"
+                  required
                 >
                 <button class="btn btn__form">
                   <img
