--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="./scripts/slider.js" defer></script>
+    <script src="./scripts/intersection.js" defer></script>
     <script src="./scripts/main.js" defer></script>
   </head>
 
