--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,15 @@
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet">
+      <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   </head>
 
   <body class="page__body">
+
     <div class="page-loader">
       <div class="spinner"></div>
     </div>
+
     <header
       class="header"
       id="page-top"
@@ -357,60 +360,81 @@
     </main>
 
     <section
-      class="section gallery"
-      id="gallery"
-      data-aos="fade-up"
-      data-aos-duration="900"
+    class="galery"
+    id="galery"
+    data-aos="fade-up"
+    data-aos-duration="900"
     >
       <div class="container">
-        <h2 class="section__title">
+        <h2 class="title galery__title">
           Галерея
         </h2>
-        <div class="gallery__slider">
-          <div class="gallery__slider--slides">
-            <div class="gallery__slider--item">
-              <img
-                class="gallery__slider--item-image"
-                src="photos/gallery-1.png"
-                alt="slide-1"
-              >
-            </div>
+      </div>
 
-            <div class="gallery__slider--item">
-              <img
-                class="gallery__slider--item-image"
-                src="photos/gallery-2.png"
-                alt="slide-2"
-              >
-            </div>
+      <div class="carousel">
+        <div class="galery__slider js-flickity" data-flickity = "{ &quot;contain&quot;: true }">
+          <div class="carousel__cell">
+            <img
+              src="./photos/gallery-1.png"
+              alt="picture"
+              class="carousel__cell--image"
+            >
+          </div>
 
-            <div class="gallery__slider--item">
-              <img
-                class="gallery__slider--item-image"
-                src="photos/gallery-3.png"
-                alt="slide-3"
-              >
-            </div>
+          <div class="carousel__cell">
+            <img
+              src="./photos/gallery-2.png"
+              alt="picture"
+              class="carousel__cell--image"
+            >
+          </div>
 
-            <div class="gallery__slider--item">
-              <img
-                class="gallery__slider--item-image"
-                src="photos/gallery-4.png"
-                alt="slide-4"
-              >
-            </div>
+          <div class="carousel__cell">
+            <img
+              src="./photos/gallery-3.png"
+              alt="picture"
+              class="carousel__cell--image"
+            >
+          </div>
+
+          <div class="carousel__cell">
+            <img
+              src="./photos/gallery-4.png"
+              alt="picture"
+              class="carousel__cell--image"
+            >
           </div>
         </div>
+      </div>
 
-        <div class="gallery__bullets">
-          <div class="gallery__bullets--bullet"></div>
-          <div class="gallery__bullets--bullet"></div>
-          <div class="gallery__bullets--bullet"></div>
-          <div class="gallery__bullets--bullet"></div>
+      <div class="container">
+        <div class="galery__desktop">
+          <img
+            src="./photos/gallery-1.png"
+            alt="galery pic"
+            class="galery__img galery__img--1"
+          >
+
+          <img
+            src="./photos/gallery-2.png"
+            alt="galery pic"
+            class="galery__img galery__img--2"
+          >
+
+          <img
+            src="./photos/gallery-3.png"
+            alt="galery pic"
+            class="galery__img galery__img--3"
+          >
+
+          <img
+            src="./photos/gallery-4.png"
+            alt="galery pic"
+            class="galery__img galery__img--4"
+          >
         </div>
       </div>
     </section>
-
     <main class="main">
       <section class="section subscription">
         <h2 class="
@@ -622,8 +646,6 @@
           </div>
         </div>
 
-
-
         <div class="footer__authors">
           <div class="footer__authors-peaple">
             <p class="footer__authors--item">Made by Valerii Viachalo</p>
@@ -642,6 +664,7 @@
     <script>
       AOS.init();
     </script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
 
 </html>
