--- a/src/index.html
+++ b/src/index.html
@@ -52,10 +52,14 @@
           <div class="menu__content">
             <div class="menu__block">
               <div class="nav">
-                <a href="#gallery" class="nav__link">Галерея</a>
-                <a href="#follow" class="nav__link">Про Нас</a>
-                <a href="#events" class="nav__link">Виставки та події</a>
-                <a href="#footer" class="nav__link">Контакти</a>
+                <div class="nav__left">
+                  <a href="#gallery" class="nav__link">Галерея</a>
+                  <a href="#events" class="nav__link">Виставки та події</a>
+                </div>
+                <div class="nav__right">
+                  <a href="#follow" class="nav__link">Про Нас</a>
+                  <a href="#footer" class="nav__link">Контакти</a>
+                </div>
               </div>
             </div>
             <div class="menu__block menu__block--museum-info">
@@ -86,7 +90,7 @@
     <main>
       <div class="container">
         <section class="events" id="events">
-          <h2 class="section__title">Актуальні події</h2>
+          <h2 class="section__title">Актуальні події </h2>
           <div class="events__content">
             <article class="event">
               <img
@@ -99,7 +103,10 @@
                   <p class="event__type">ВИСТАВКА</p>
                   <p class="event__date">26.08-29.11.2019</p>
                 </div>
-                <h2 class="event__title">Йду і повертаюсь</h2>
+                <div class="event__title">
+                  <h2 class="event__title-text">Йду і повертаюсь </h2>
+                  <div class="red-square"></div>
+                </div>
                 <p class="event__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
               </div>
             </article>
@@ -114,7 +121,10 @@
                   <p class="event__type">ВИСТАВКА</p>
                   <p class="event__date">26.08-29.11.2019</p>
                 </div>
-                <h2 class="event__title">І спогади і мрії</h2>
+                <div class="event__title">
+                  <h2 class="event__title-text">І спогади і мрії</h2>
+                  <div class="red-square"></div>
+                </div>
                 <p class="event__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
               </div>
             </article>
@@ -125,7 +135,7 @@
                   <p class="event__type">ЛЕКЦІЯ</p>
                   <p class="event__date event__date--lecture">26/08/2019 - 11:00</p>
                 </div>
-                <h2 class="event__title">Від класицизму до романтизму</h2>
+                <h2 class="event__title-text">Від класицизму до романтизму</h2>
               </div>
             </article>
           </div>
@@ -157,6 +167,12 @@
                 alt="image_4"
                 class="gallery__image gallery__image--narrow"
               >
+            </div>
+            <div class="gallery__images gallery__images--tablet">
+              <img
+                src="./images/gallery/gooses.png"
+                alt="gooses"
+                class="gallery__image gallery__image--tablet">
             </div>
           </div>
         </section>
@@ -194,8 +210,12 @@
           <div class="footer__icons">
             <a href="#" class="footer__logo"></a>
             <div class="footer__icons-sm">
-              <a href="#" class="icon icon--facebook"></a>
-              <a href="#" class="icon icon--instagram"></a>
+              <a href="https://www.facebook.com/namu.museum"
+              target="_blank"
+              class="icon icon--facebook"></a>
+              <a href="https://www.instagram.com/namu.museum"
+              target="_blank"
+              class="icon icon--instagram"></a>
             </div>
           </div>
           <div class="footer__contacts">
@@ -218,20 +238,34 @@
             </div>
             <div class="museum-info">
               <p class="museum-info__title museum-info__title--footer">Контакти:</p>
-              <p class="museum-info__work-column museum-info__work-column--footer">
-                вул. М. Грушевського, 6; Київ, 01001
-                тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54
-                e-mail: info@namu.kiev.ua
-              </p>
+              <div class="museum-info__work-column museum-info__work-column--footer">
+                <a href="https://maps.app.goo.gl/eWg33E4KEhg31NJ47"
+                target="_blank"
+                class="museum-info__work-column museum-info__work-column--footer"
+                >вул. М. Грушевського, 6; Київ, 01001</a>
+                <br><a href="tel:+38 044 278-13-57"
+                class="museum-info__work-column museum-info__work-column--footer"
+                >тел. +38 (044) 278-13-57</a>
+                <br><a href="fax:+38 044 278-74-54"
+                class="museum-info__work-column museum-info__work-column--footer"
+                >факс +38 (044) <br>278-74-54</a>
+                <br><a href="mailto:info@namu.kiev.ua"
+                class="museum-info__work-column museum-info__work-column--footer"
+                >e-mail: info@namu.kiev.ua</a>
+              </div>
             </div>
           </div>
 
           <div class="nav nav--footer">
-            <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
-            <a href="#follow" class="nav__link nav__link--footer">Про Нас</a>
-            <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
-            <a href="#footer" class="nav__link nav__link--footer">Контакти</a>
+            <div class="nav__left">
+              <a href="#gallery" class="nav__link nav__link--footer">Галерея</a>
+              <a href="#events" class="nav__link nav__link--footer">Виставки та події</a>
+            </div>
+
+            <div class="nav__right">
+              <a href="#follow" class="nav__link nav__link--footer">Про Нас</a>
+              <a href="#footer" class="nav__link nav__link--footer">Контакти</a>
+            </div>
           </div>
         </div>
         <div class="footer__rights">
