--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     >
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet">
-      <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   </head>
 
   <body class="page__body">
@@ -90,7 +90,7 @@
         menu__navigation
       ">
       <main class="container">
-        <div class="grid">
+        <div class="grid .menu__navigation--content">
           <a href="#" class="menu__navigation--cross-btn">
             <img
               src="images/close.svg"
@@ -336,22 +336,23 @@
         class="events__list--item"
       >
         <div class="lection__description">
-          <div class="lection__content">
-            <div class="lection__type-and-date">
-              <span class="lection__type-and-date--type">
+          <div class="lection__content events__content">
+            <div class="lection__type-and-date events__type-and-date">
+              <span class="lection__type-and-date--type events__type-and-date--type">
                 лекція
               </span>
-              <span class="lection__type-and-date--date">
+              <span class="lection__type-and-date--date events__type-and-date--date">
                 26/08/2019 - 11:00
               </span>
             </div>
-            <div class="events__description">
-              <p class="events__description--title lection__description--title">
-                Від класицизму до
-                <br>
-                романтизму
-              </p>
-            </div>
+            <p class="
+              events__description--title
+              lection__description--title"
+            >
+              Від класицизму до
+              <br>
+              романтизму
+            </p>
           </div>
         </div>
       </div>
@@ -360,19 +361,22 @@
     </main>
 
     <section
-    class="galery"
-    id="galery"
+    class="gallery"
+    id="gallery"
     data-aos="fade-up"
     data-aos-duration="900"
     >
       <div class="container">
-        <h2 class="title galery__title">
+        <h2 class="title gallery__title">
           Галерея
         </h2>
       </div>
 
       <div class="carousel">
-        <div class="galery__slider js-flickity" data-flickity = "{ &quot;contain&quot;: true }">
+        <div
+          class="gallery__slider js-flickity"
+          data-flickity = "{ &quot;contain&quot;: true }"
+        >
           <div class="carousel__cell">
             <img
               src="./photos/gallery-1.png"
@@ -408,29 +412,29 @@
       </div>
 
       <div class="container">
-        <div class="galery__desktop">
+        <div class="gallery__desktop">
           <img
             src="./photos/gallery-1.png"
-            alt="galery pic"
-            class="galery__img galery__img--1"
+            alt="gallery pic"
+            class="gallery__img gallery__img--1"
           >
 
           <img
             src="./photos/gallery-2.png"
-            alt="galery pic"
-            class="galery__img galery__img--2"
+            alt="gallery pic"
+            class="gallery__img gallery__img--2"
           >
 
           <img
             src="./photos/gallery-3.png"
-            alt="galery pic"
-            class="galery__img galery__img--3"
+            alt="gallery pic"
+            class="gallery__img gallery__img--3"
           >
 
           <img
             src="./photos/gallery-4.png"
-            alt="galery pic"
-            class="galery__img galery__img--4"
+            alt="gallery pic"
+            class="gallery__img gallery__img--4"
           >
         </div>
       </div>
@@ -570,7 +574,11 @@
               <h3 class="schedule-and-contacts--title">Контакти:</h3>
               <ul class="contact__list">
                 <li class="contacts__list--item">
-                  <a href="https://g.co/kgs/cGHm3e" class="contacts__list--item--link">
+                  <a
+                    href="https://maps.app.goo.gl/js99QXrYZgZiNJEw7"
+                    class="contacts__list--item--link"
+                    target="_blank"
+                  >
                     вул. М. Грушевського, 6; Київ, 01001
                   </a>
                 </li>
