add menu for tablet

--- a/src/index.html
+++ b/src/index.html
@@ -43,15 +43,15 @@
 
       <div class="menu__schedule">
         <h2 class="menu__title">Графік роботи</h2>
-        <p class="menu__description">
+        <p class="menu__description menu__time">
           <span class="footer__schedule__time">12:00 — 20:00</span> середа<br>
           <span class="footer__schedule__time">12:00 — 20:00</span> четвер<br>
           <span class="footer__schedule__time">12:00 — 20:00</span> п’ятниця<br>
           <span class="footer__schedule__time">11:00 — 19:00</span> субота<br>
           <span class="footer__schedule__time">11:00 — 19:00</span> неділя
         </p>
-        <br>
-        <p class="menu__description">
+        <!-- <br> -->
+        <p class="menu__description menu__weekends">
           <span class="footer__schedule__time">Вихідні:</span> понеділок, вівторок<br>
           Каса припиняє роботу за 1 годину<br>
           до закриття музею
