add gallery section

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       type="image/png"
       href="./img/favicon.ico"
     >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/app.scss">
     <title>Museum | Home Page</title>
   </head>
@@ -161,6 +162,112 @@
         </div>
       </section>
 
+      <!-- gallery -->
+      <section class="section gallery">
+        <div class="section__container">
+          <div class="gallery__block">
+            <h2 class="h2 gallery__title">Галерея</h2>
+
+            <div class="gallery__desk">
+              <div class="gallery__imgs">
+                <picture>
+                  <img
+                    class="gallery__img"
+                    src="./img/gallery_1.jpg"
+                    alt="gallery__img"
+                    loading="lazy"
+                  >
+                </picture>
+              </div>
+              <div class="gallery__imgs gallery__imgs--big">
+                <picture>
+                  <img
+                    class="gallery__img"
+                    src="./img/gallery_2.jpg"
+                    alt="gallery__img"
+                    loading="lazy"
+                  >
+                </picture>
+              </div>
+              <div class="gallery__imgs gallery__imgs--big gallery__imgs--padding-2">
+                <picture>
+                  <img
+                    class="gallery__img"
+                    src="./img/gallery_3.jpg"
+                    alt="gallery__img"
+                    loading="lazy"
+                  >
+                </picture>
+              </div>
+              <div class="gallery__imgs gallery__imgs--padding-2">
+                <picture>
+                  <img
+                    class="gallery__img"
+                    src="./img/gallery_4.jpg"
+                    alt="gallery__img"
+                    loading="lazy"
+                  >
+                </picture>
+              </div>
+            </div>
+
+            <div class="swiper gallery__mobile">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="gallery__slide">
+                    <picture>
+                      <img
+                        class="gallery__img"
+                        src="./img/gallery_1.jpg"
+                        alt="gallery__img"
+                        loading="lazy"
+                      >
+                    </picture>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="gallery__slide">
+                    <picture>
+                      <img
+                        class="gallery__img"
+                        src="./img/gallery_5.jpg"
+                        alt="gallery__img"
+                        loading="lazy"
+                      >
+                    </picture>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="gallery__slide">
+                    <picture>
+                      <img
+                        class="gallery__img"
+                        src="./img/gallery_1.jpg"
+                        alt="gallery__img"
+                        loading="lazy"
+                      >
+                    </picture>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="gallery__slide">
+                    <picture>
+                      <img
+                        class="gallery__img"
+                        src="./img/gallery_5.jpg"
+                        alt="gallery__img"
+                        loading="lazy"
+                      >
+                    </picture>
+                  </div>
+                </div>
+              </div>
+              <div class="gallery__pagination"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- ui -->
       <section class="section ui">
         <div class="section__container">
@@ -216,6 +323,7 @@
     <!-- footer -->
     <footer class="footer"></footer>
 
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
+    <script src="./scripts/main.js" defer></script>
   </body>
 </html>
