--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                 grid__item--tablet-1-2
                 grid__item--desktop-3-5
               ">
-            <a href="#" class="header__link link">
+            <a href="#subscription" class="header__link link">
               <div class="link__title">Квитки</div>
               <div class="link__button link__button--white">
                 <img src="images/arrow.svg" alt="arrow">
@@ -439,8 +439,9 @@
         </div>
       </div>
     </section>
+
     <main class="main">
-      <section class="section subscription">
+      <section class="section subscription" id="subscription">
         <h2 class="
           section__title
           subscription__title
