add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -331,9 +331,19 @@
           </a>
 
           <div class="footer__logos">
-            <a href="https://uk-ua.facebook.com/" class="footer__facebook-logo"></a>
-  
-            <a href="https://www.instagram.com/" class="footer__instagram-logo"></a>
+            <a 
+              href="https://uk-ua.facebook.com/" 
+              class="footer__facebook-logo"
+              target="_blank"
+            >
+            </a>
+
+            <a 
+              href="https://www.instagram.com/" 
+              class="footer__instagram-logo"
+              target="_blank"
+            >
+            </a>
           </div>
         </div>
   
