--- a/src/index.html
+++ b/src/index.html
@@ -362,7 +362,7 @@
           </div>
           <a href="#" class="footer__home-link">
             <img
-              src="./images/icons/right_black.svg"
+              src="./images/icons/arrow.svg"
               alt="Icon arrow"
               class="footer__home-arrow"
             >
@@ -386,7 +386,7 @@
           </nav>
           <div class="footer__credits">
             <p class="footer__author">Designed by Zhyriada Marina</p>
-            <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+            <p class="footer__copyright">Copyright © 2023. All Rights Reserved.</p>
           </div>
         </div>
       </div>
