--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
     type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&amp;family=Montserrat:wght@300;400;700&amp;display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&amp;family=Montserrat:wght@300;400;700&amp;display=swap"
+      rel="stylesheet">
   </head>
 
   <body class="page__body">
@@ -188,54 +190,55 @@
             </article>
           </div>
         </section>
+
         <section class="container gallery" id="gallery">
           <h2 class="gallery__title section-title"> Галерея </h2>
           <div class="gallery__content">
             <img
-              src="./images/gallery1_1.png"
-              alt="Gallery painting 1"
-              class="gallery__image gallery__image--mobile"
-            >
+                src="./images/gallery1_1.png"
+                alt="Gallery painting 1"
+                class="gallery__image gallery__image--mobile"
+              >
             <img
-              src="./images/gallery2_1.png"
-              alt="Gallery painting 2"
-              class="gallery__image gallery__image--mobile"
-            >
+                src="./images/goose.png"
+                alt="Gallery painting 2"
+                class="gallery__image gallery__image--tablet"
+              >
             <img
-              src="./images/gallery3_1.png"
-              alt="Gallery painting 3"
-              class="gallery__image gallery__image--mobile gallery__image--hide"
-            >
+                src="./images/gallery3_1.png"
+                alt="Gallery painting 3"
+                class="gallery__image gallery__image--mobile gallery__image--hide"
+              >
             <img
-              src="./images/gallery4_1.png"
-              alt="Gallery painting 4"
-              class="gallery__image gallery__image--mobile gallery__image--hide"
-            >
+                src="./images/gallery4_1.png"
+                alt="Gallery painting 4"
+                class="gallery__image gallery__image--mobile gallery__image--hide"
+              >
             <img
-              src="./images/gallery1_1.png"
-              alt="Gallery painting 1"
-              class="gallery__image gallery__image--mobile gallery__image--hide"
-            >
+                src="./images/gallery1_1.png"
+                alt="Gallery painting 1"
+                class="gallery__image gallery__image--mobile gallery__image--hide"
+              >
             <img
-              src="./images/gallery1_1.png"
-              alt="Gallery painting 1 desktop"
-              class="gallery__image gallery__image--desktop"
-            >
+                src="./images/gallery1_1.png"
+                alt="Gallery painting 1 desktop"
+                class="gallery__image gallery__image--desktop"
+              >
             <img
-              src="./images/gallery2_1.png"
-              alt="Gallery painting 2 desktop"
-              class="gallery__image gallery__image--desktop gallery__image--desktop--wide"
-            >
+                src="./images/gallery2_1.png"
+                alt="Gallery painting 2 desktop"
+                class="gallery__image gallery__image--desktop gallery__image--desktop--wide"
+              >
             <img
-              src="./images/gallery3_1.png"
-              alt="Gallery painting 3 desktop"
-              class="gallery__image gallery__image--desktop gallery__image--desktop--wide"
-            >
+                src="./images/gallery3_1.png"
+                alt="Gallery painting 3 desktop"
+                class="gallery__image gallery__image--desktop gallery__image--desktop--wide"
+              >
             <img
-              src="./images/gallery4_1.png"
-              alt="Gallery painting 4 desktop"
-              class="gallery__image gallery__image--desktop"
-            >
+                src="./images/gallery4_1.png"
+                alt="Gallery painting 4 desktop"
+                class="gallery__image gallery__image--desktop"
+              >
           </div>
           <div class="gallery__dots">
             <div class="gallery__dot gallery__dot--active"></div>
@@ -244,6 +247,7 @@
             <div class="gallery__dot"></div>
           </div>
         </section>
+
         <section class="subscription" id="subscription">
           <div class="container subscription__content">
             <h2 class="section-title subscription__title"> Підписка </h2>
@@ -258,18 +262,18 @@
               <div class="field__content">
                 <label class="field__label">
                   <input
-                  type="email"
-                  name="email"
-                  placeholder="E-mail"
-                  class="field__input"
-                  required=""
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="field__input"
+                    required=""
                   >
                 </label>
                 <button type="submit" class="field__send">
                   <img
-                  src="./images/icons/right_black.svg"
-                  alt="Icon vector black"
-                  class="field__vector-icon"
+                    src="./images/icons/right_black.svg"
+                    alt="Icon vector black"
+                    class="field__vector-icon"
                   >
                 </button>
               </div>
@@ -287,22 +291,16 @@
               <p class="footer__logo">NA<br>MU</p>
             </a>
             <div class="footer__media-icons">
-              <a
-                href="https://www.facebook.com/namu.museum/"
-                target="_blank"
-                class="footer__facebook-link footer__icon-link"
-              >
+              <a href="https://www.facebook.com/namu.museum/" target="_blank"
+                class="footer__facebook-link footer__icon-link">
                 <img
                   src="./images/icons/fb.svg"
                   alt="Facebook icon"
                   class="footer__facebook-icon footer__icon"
                 >
               </a>
-              <a
-                href="https://www.instagram.com/namu.museum/?hl=en"
-                target="_blank"
-                class="footer__icon-link footer__instagram-link"
-              >
+              <a href="https://www.instagram.com/namu.museum/?hl=en" target="_blank"
+                class="footer__icon-link footer__instagram-link">
                 <img
                   src="./images/icons/insta.svg"
                   alt="instagram icon"
@@ -333,7 +331,8 @@
               </ul>
               <div class="schedule__linebreaker"><br></div>
               <p class="schedule__info">
-                <span class="schedule--text--bold">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+                <span class="schedule--text--bold">Вихідні:</span> понеділок, вівторок <br> Каса припиняє роботу за 1
+                годину до закриття музею
               </p>
             </div>
           </div>
@@ -341,11 +340,8 @@
             <h4 class="contacts__title">Контакти:</h4>
             <div class="contacts__info">
               <p class="contacts__address">
-                <a
-                  href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.4493441,30.5284204,17z/data=!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
-                  target="_blank"
-                  class="contacts__link"
-                >
+                <a href="https://www.google.com/maps/place/Mykhaila+Hrushevskoho+St,+6,+Kyiv,+02000/@50.4493441,30.5284204,17z/data=!4m6!3m5!1s0x40d4ce524453048d:0x49a2895b6cb43e10!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F1tj901fm?entry=ttu"
+                  target="_blank" class="contacts__link">
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
               </p>
