--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,86 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <header class="header container">
+
+      <div class="top-bar">
+        <a href="#" class="icon menu-icon"></a>
+        <a href="#" class="top-bar__logo"></a>
+      </div>
+
+      <h1 class="header__title">ХУДОЖНІЙ <br> МУЗЕЙ</h1>
+
+      <div class="header__button">
+        <div href="#" class="header__button-title">КВИТКИ</div>
+        <div class="header__button-rectangle">
+          <img
+            src="./images/button-arrow.png"
+            alt="button-arrow"
+            class="header__button-arrow"
+          >
+        </div>
+      </div>
+    </header>
+
+    <aside></aside>
+
+    <main class="main">
+      <section class="section events">
+        <h2 class="events__title">Актуальні <br> події</h2>
+        <div class="events__go-and-come-back">
+          <img
+            src="./images/go-and-come-back.png"
+            alt="go-and-come-back"
+            class="events__img"
+          >
+
+          <div class="events__inform">
+            <span>ВИСТАВКА</span>
+            <span class="events__date">26.08-29.11.2019</span>
+          </div>
+
+          <div class="events__block">
+            <h3 class="events__block-title">Йду і повертаюсь</h3>
+            <span class="events__block-rectangle"></span>
+          </div>
+
+          <article class="events__article">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</article>
+        </div>
+        <div class="events__memories-and-dreams  ">
+          <img
+            src="./images/memories-and-dreams.png"
+            alt="events__memories-and-dreams"
+            class="events__img"
+          >
+
+          <div class="events__inform">
+            <span>ВИСТАВКА</span>
+            <span class="events__date">26.08-29.11.2019</span>
+          </div>
+
+          <div class="events__block">
+            <h3 class="events__block-title">І спогади і мрії</h3>
+            <span class="events__block-rectangle"></span>
+          </div>
+
+          <article class="events__article">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</article>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer"></footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
