add subscription section

--- a/src/index.html
+++ b/src/index.html
@@ -268,6 +268,27 @@
         </div>
       </section>
 
+      <!-- subscription -->
+      <section class="section subscription">
+        <div class="subscription__block">
+          <div class="subscription__cont">
+            <h2 class="h2 subscription__title">Підписка</h2>
+            <div class="text subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+          </div>
+
+          <form class="form">
+            <input
+              class="form__input"
+              name="email"
+              type="email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="form__submit" type="submit"></button>
+          </form>
+        </div>
+      </section>
+
       <!-- ui -->
       <section class="section ui">
         <div class="section__container">
